--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ const { title } = Astro.props;
 </html>
 
 <style is:global>
-	@font-face {
+	@font-face base{
 		font-family: 'JollyLodger';
 		src: url('./fonts/JollyLodger-Regular.ttf');
 		font-weight: normal;
