--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,9 +32,11 @@ const { title } = Astro.props;
 </html>
 
 <style is:global>
+
+@import url('https://fonts.googleapis.com/css2?family=Jolly+Lodger&display=swap');
 	@font-face base{
 		font-family: 'JollyLodger';
-		src: url('./fonts/JollyLodger-Regular.ttf');
+		src: url('/fonts/JollyLodger-Regular.ttf') format("ttf");
 		font-weight: normal;
 		font-style: normal;
 		font-display: swap;
