--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,7 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="./vispera-de-todos-los-santos.png" />
 		<link rel="preload" href="/fonts/JollyLodger-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous" />
+		<link href="https://fonts.googleapis.com/css2?family=Jolly+Lodger&display=swap" rel="stylesheet">
 		<meta name="generator" content={Astro.generator} />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" />
 		<title>{title}</title>
@@ -34,6 +35,7 @@ const { title } = Astro.props;
 <style is:global>
 
 @import url('https://fonts.googleapis.com/css2?family=Jolly+Lodger&display=swap');
+
 	@font-face base{
 		font-family: 'JollyLodger';
 		src: url('/fonts/JollyLodger-Regular.ttf') format("ttf");
@@ -42,6 +44,11 @@ const { title } = Astro.props;
 		font-display: swap;
 		font-named-instance: 'Regular';
 	}
+	.jolly-lodger-regular {
+  font-family: "Jolly Lodger", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
   body{
 		position: relative;
       margin: 0;
