--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Ghost from '../components/Ghost.astro';
+import '@fontsource/jolly-lodger';
 import NavBar from '../components/NavBar.astro';
 import Background from '../components/Background.astro';
 interface Props {
@@ -57,7 +58,7 @@ const { title } = Astro.props;
 			padding-top: 30px;
 			background-image: radial-gradient(#223, #112);
 			color: #f0f0f0;
-			font-family: 'JollyLodger';
+			font-family: 'Jolly Lodger';
   }
 	.sombras{
 		filter: drop-shadow(7px 0px 3px black);
