cambiando la tipografia

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,7 +60,7 @@ import { CldUploadWidget } from "astro-cloudinary";
     color: rgba(255, 255, 255, 0.1);
     font-size: 10vw;
     text-align: center;
-    font-family: "JollyLodger";
+			font-family: 'Jolly Lodger';
     font-weight: 100;
     z-index: 50;
     animation: animateText 5s linear infinite;
