agregando la tipografia

--- a/src/components/Background.astro
+++ b/src/components/Background.astro
@@ -79,7 +79,7 @@ const halloweenPics = await getCollection("halloweenPics");
   }
 
   .ghostText {
-    font-family: jollylodger;
+    font-family: 'Jolly Lodger';
     display: flex;
   }
   .ghostText span {
