add ghots mouse

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const { title } = Astro.props;
 	</head>
 	<body class="min-h-screen">
 		<NavBar />
-		<!-- <Ghost /> -->
+		<Ghost />
 		<slot />
 		<img src="./spiderWeb.png" alt="Spider Web" class="absolute sombras right-0 top-[-5%] w-full spointer-events-none h-[35%] tablet:h-[46%]" />
 		<Background />
